{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 10,
  "lineage": "7f6ab478-2238-0bf7-5761-22cd819524fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Panda_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976289682:internet-gateway/igw-04c41e81aa556e005",
            "id": "igw-04c41e81aa556e005",
            "owner_id": "954976289682",
            "region": "us-east-1",
            "tags": {
              "Name": "Panda_IGW"
            },
            "tags_all": {
              "Name": "Panda_IGW"
            },
            "vpc_id": "vpc-0a50eb76a668b30b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Panda_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04c41e81aa556e005",
            "id": "r-rtb-0b2d59159aad3c0f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0b2d59159aad3c0f8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "954976289682",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0b2d59159aad3c0f8"
          },
          "dependencies": [
            "aws_internet_gateway.Panda_IGW",
            "aws_route_table.Panda_Pub_Rt",
            "aws_vpc.Panda_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Panda_Pub_Rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976289682:route-table/rtb-0b2d59159aad3c0f8",
            "id": "rtb-0b2d59159aad3c0f8",
            "owner_id": "954976289682",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c41e81aa556e005",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Panda_public-route-table"
            },
            "tags_all": {
              "Name": "Panda_public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a50eb76a668b30b0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "954976289682",
            "id": "rtb-0b2d59159aad3c0f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Panda_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Panda_Pri_Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976289682:subnet/subnet-0632ea3dfe5746edd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.245.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0632ea3dfe5746edd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954976289682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Panda_Pri_Sub"
            },
            "tags_all": {
              "Name": "Panda_Pri_Sub"
            },
            "vpc_id": "vpc-0a50eb76a668b30b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "954976289682",
            "id": "subnet-0632ea3dfe5746edd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Panda_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Panda_Pub_Sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976289682:subnet/subnet-0831c153a4f9fc8a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.245.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0831c153a4f9fc8a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954976289682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Panda_Pub_Sun"
            },
            "tags_all": {
              "Name": "Panda_Pub_Sun"
            },
            "vpc_id": "vpc-0a50eb76a668b30b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "954976289682",
            "id": "subnet-0831c153a4f9fc8a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.Panda_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Panda_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:954976289682:vpc/vpc-0a50eb76a668b30b0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.245.0.0/16",
            "default_network_acl_id": "acl-01d401e36808f8efb",
            "default_route_table_id": "rtb-020ba59c9855e2618",
            "default_security_group_id": "sg-00884184f316204c4",
            "dhcp_options_id": "dopt-028c70d6474a1285b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a50eb76a668b30b0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-020ba59c9855e2618",
            "owner_id": "954976289682",
            "region": "us-east-1",
            "tags": {
              "Name": "Panda_VPC"
            },
            "tags_all": {
              "Name": "Panda_VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "954976289682",
            "id": "vpc-0a50eb76a668b30b0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}